--- a/404.html
+++ b/404.html
@@ -7,6 +7,8 @@
     <title>TA Solutions</title>
     <base href="/ta-solutions/" />
 
+    <link rel="shortcut icon" type="image/x-icon" href="images/logo.png" />
+
     <link href="font-awesome/css/fontawesome.css" rel="stylesheet" />
     <link href="font-awesome/css/brands.css" rel="stylesheet" />
     <link href="font-awesome/css/solid.css" rel="stylesheet" />
