--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
     <script src="js/AnimateOnScroll.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
